packages/beff-core/tests/snapshots/frontend_v2__tests__array_builtin.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"entry.ts\", from)])"
---
--- entry.ts ---
export type X = Array<string>;
parse.buildParsers<{ X: X }>();
--------------------------------
type X = Array<string>;


type BuiltParsers = {
  X: X,
}
