packages/beff-core/tests/snapshots/frontend_v2__tests__builtin_type_ref.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: print_types(from)
---
--- entry.ts ---
type X = Array<string>;
parse.buildParsers<{ X: X }>();
--------------------------------
type X = Array<string>;


type BuiltParsers = {
  X: X,
}
