packages/beff-core/tests/snapshots/frontend_v2__tests__circular_dependency_imports_unused.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    import { B } from \"./b\";\n                    export type A = string;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    import { A } from \"./a\";\n                    export type B = string;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { A } from \"./a\";\n                    type X = A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type A = string;

type X = A;


type BuiltParsers = {
  X: X,
}
