packages/beff-core/tests/snapshots/frontend_v2__tests__combined_default_and_named_import.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export const A = \"a\" as const;\n                    const D = \"d\" as const;\n                    export default D;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import D, { A } from \"./t\";\n                    type X = typeof D;\n                    type Y = typeof A;\n                    parse.buildParsers<{ X: X, Y: Y }>();\n                \"#)])"
---
type entry_ts__X = "d";

type entry_ts__Y = "a";


type BuiltParsers = {
  X: entry_ts__X,
  Y: entry_ts__Y,
}
