packages/beff-core/tests/snapshots/frontend_v2__tests__date_builtin.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"entry.ts\", from)])"
---
--- entry.ts ---
export type X = Date;
parse.buildParsers<{ X: X }>();
--------------------------------
type X = Date;


type BuiltParsers = {
  X: X,
}
