packages/beff-core/tests/snapshots/frontend_v2__tests__exort_default_type_and_value.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    type Y = number;\n                    const Y = \"abc\" as const;\n                    export default Y;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import Y from \"./t\";\n                    type X = Y;\n                    type Z = typeof Y;\n                    parse.buildParsers<{ X: X, Z: Z }>();\n                \"#)])"
---
--- t.ts ---
type Y = number;
const Y = "abc" as const;
export default Y;
--- entry.ts ---
import Y from "./t";
type X = Y;
type Z = typeof Y;
parse.buildParsers<{ X: X, Z: Z }>();
--------------------------------
type X = Y;

type Z = "abc";

type Y = number;


type BuiltParsers = {
  X: X,
  Z: Z,
}
