packages/beff-core/tests/snapshots/frontend_v2__tests__exort_default_type_ref.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    type Y = string;\n                    export default Y;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import Y from \"./t\";\n                    type X = Y;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type X = Y;

type Y = string;


type BuiltParsers = {
  X: X,
}
