packages/beff-core/tests/snapshots/frontend_v2__tests__exort_default_value_identifier.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    const Y1 = \"abc\" as const;\n                    export default Y1;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import Y2 from \"./t\";\n                    type Z = typeof Y2;\n                    parse.buildParsers<{  Z: Z }>();\n                \"#)])"
---
type entry_ts__Z = "abc";


type BuiltParsers = {
  Z: entry_ts__Z,
}
