packages/beff-core/tests/snapshots/frontend_v2__tests__export_default_object_expression.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export default { A: \"a\" as const };\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import O from \"./t\";\n                    type X = typeof O.A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
--- t.ts ---
export default { A: "a" as const };
--- entry.ts ---
import O from "./t";
type X = typeof O.A;
parse.buildParsers<{ X: X }>();
--------------------------------
type X = "a";


type BuiltParsers = {
  X: X,
}
